@@ -227,24 +227,21 @@ public class MovieService {
 
     // TMDB에서 영화 상세 정보 가져오기
     private Map<String, Object> getTmdbMovieInfo(String movieNm) {
-        // TMDB 영화 검색 API 요청 URL 생성
+        // 요청 URL 생성
         UriComponentsBuilder builder = UriComponentsBuilder.fromUriString(tmdbSearchUrl)
                 .queryParam("api_key", tmdbApiKey)
                 .queryParam("query", movieNm);
 
         String requestUrl = builder.toUriString();
-        System.out.println("TMDB API Request URL: " + requestUrl);
 
         // API 요청 및 응답 받기
         String jsonResponse;
         try {
             jsonResponse = restTemplate.getForObject(requestUrl, String.class);
             if (jsonResponse == null || jsonResponse.isEmpty()) {
-                throw new RuntimeException("TMDB API returned empty response");
+                throw new ResponseNotFound("404","TMDB 응답 요청이 비어있습니다.");
             }
-            System.out.println("TMDB API Response: " + jsonResponse);
         } catch (Exception e) {
-            System.err.println("Error during TMDB API request: " + e.getMessage());
             return null;
         }
 
@@ -257,19 +254,18 @@ public class MovieService {
             }
 
             // 첫 번째 결과의 ID를 사용하여 상세 정보 조회
-            String movieId = results.get(0).get("id").toString();
-            String detailUrl = "https://api.themoviedb.org/3/movie/" + movieId + "?api_key=" + tmdbApiKey;
-            String detailResponse = restTemplate.getForObject(detailUrl, String.class);
+            Map<String, Object> first = results.getFirst();
+            String movieId = first.get("id").toString();
 
-            if (detailResponse == null || detailResponse.isEmpty()) {
-                return null;
-            }
+            // 디테일 URL 생성
+            String detailUrl = "https://api.themoviedb.org/3/movie/" + movieId + "?api_key=" + tmdbApiKey;
+            // 응답 생성
+            String detailResponse = restTemplate.getForObject(detailUrl, String.class);
 
             // 상세 정보 반환
             return objectMapper.readValue(detailResponse, new TypeReference<Map<String, Object>>() {});
         } catch (Exception e) {
-            System.err.println("Error parsing TMDB JSON response: " + e.getMessage());
-            return null;
+            throw new ParsingException("400","API 응답 파싱 실패");
         }
     }
 
@@ -308,7 +304,7 @@ public class MovieService {
             // 포스터 URL 생성
             return "https://image.tmdb.org/t/p/w500" + posterPath;
         } catch (Exception e) {
-            return "포스터 정보 없음";
+            throw new ParsingException("400","API 응답 파싱 실패");
         }
     }
 }
